--- a/public/skysportsnews.html
+++ b/public/skysportsnews.html
@@ -18,7 +18,7 @@
             preload="auto"
             data-setup="{}"
         >
-            <source src="http://xtremity.tv:80/play/1YkArHMPFPbdAQrZ9mFb5Yh1J-JKi4sWIc9hGZjr3C9HedLk5QZrWKJfRExNweuj/.m3u8" type="application/x-mpegURL" />
+            <source src="http://line.premiumpowers.net/live/tesfay123/telegram/83448.m3u8" type="application/x-mpegURL" />
             <!-- <source src="MY_VIDEO.webm" type="video/webm" /> -->
         </video>
 
