--- a/public/skysportsepl.html
+++ b/public/skysportsepl.html
@@ -14,11 +14,11 @@
         <video
             id="my-video"
             class="video-js "
-            controls autoplay 
+            controls='autoplay'
             preload="auto"
             data-setup="{}"
         >
-            <source src="http://xtremity.tv:80/6960044052/8861947865/2485222.m3u8" type="application/x-mpegURL" />
+            <source src="http://line.premiumpowers.net/live/tesfay123/telegram/83447.m3u8" type="application/x-mpegURL"/>
             <!-- <source src="MY_VIDEO.webm" type="video/webm" /> -->
         </video>
 
