--- a/public/skysportsepl.html
+++ b/public/skysportsepl.html
@@ -18,7 +18,7 @@
             preload="auto"
             data-setup="{}"
         >
-            <source src="http://line.premiumpowers.net/live/tesfay123/telegram/83447.m3u8" type="application/x-mpegURL"/>
+            <source src="http://line.lemotv.cc:80/wVy2t7du6x/xVDwCN8bws/1821337.m3u8" type="application/x-mpegURL"/>
             <!-- <source src="MY_VIDEO.webm" type="video/webm" /> -->
         </video>
 
