--- a/public/skysportsnews.html
+++ b/public/skysportsnews.html
@@ -18,7 +18,7 @@
             preload="auto"
             data-setup="{}"
         >
-            <source src="http://line.premiumpowers.net/live/tesfay123/telegram/83448.m3u8" type="application/x-mpegURL" />
+            <source src="http://93406-sky.ott-cdn.me:80/live/7965b7c07f/180e2b36d9f4/577994.m3u8" type="application/x-mpegURL" />
             <!-- <source src="MY_VIDEO.webm" type="video/webm" /> -->
         </video>
 
