--- a/public/highlights.html
+++ b/public/highlights.html
@@ -104,11 +104,13 @@
       </ul>
     </div>
   </div>
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
   <script src="https://vjs.zencdn.net/8.0.4/video.min.js"></script>
 
   <script>
     var player = videojs('my-video');
+
+    
 
     
   </script>
@@ -144,6 +146,7 @@
                     // Check if it's the first video and set the src attribute of the 'player' element
               if (isFirstVideo) {
                   document.getElementById('player').src = srcAttributeValue;
+                  $("li").css("border" ,"1px solid blue");
                   isFirstVideo = false; // Set the flag to false after changing the first video src
               }
               console.log(comp,title,srcAttributeValue) 
