new update negan

--- a/public/highlights.html
+++ b/public/highlights.html
@@ -124,7 +124,7 @@
 
 <script>
 
-  const allowedLeagues = ['USA: Major League Soccer','ENGLAND: Premier League','SPAIN: La Liga','ITALY: Serie A','FRANCE: Ligue 1','GERMANY: Bundesliga'];
+  const allowedLeagues = ['USA: Major League Soccer','ENGLAND: Premier League','SPAIN: La Liga','ITALY: Serie A','FRANCE: Ligue 1','GERMANY: Bundesliga','CHAMPIONS LEAGUE: Group stage, Group A','CHAMPIONS LEAGUE: Group stage, Group B','CHAMPIONS LEAGUE: Group stage, Group C','CHAMPIONS LEAGUE: Group stage, Group D','CHAMPIONS LEAGUE: Group stage, Group E','CHAMPIONS LEAGUE: Group stage, Group F','CHAMPIONS LEAGUE: Group stage, Group G','CHAMPIONS LEAGUE: Group stage, Group H'];
   var isFirstVideo = true; // Flag to track if it's the first video
   async function HighlightsApi() {
       const response = await fetch("https://www.scorebat.com/video-api/v3/feed/?token=MTE0ODcyXzE2OTQzMTg2MDFfMzk3NWMyNjlhODhlNmVhYTg0ODUyOTFmZDFmMzMyZTM1ZTc3OWJlZA==");
