--- a/public/tnt-sport1.html
+++ b/public/tnt-sport1.html
@@ -25,7 +25,7 @@
             preload="auto"
             data-setup="{}"
         >
-            <source src="http://xtremity.tv:80/play/1YkArHMPFPbdAQrZ9mFb5aV6D8q4_IafZdzVVVMuUJGY4F6hBT5vOiteNWwth9JT/.m3u8" type="application/x-mpegURL" />
+            <source src="http://beprayu.smayra.xyz:80/live/6907800417/2455474627/13780.m3u8" type="application/x-mpegURL" />
             <!-- <source src="MY_VIDEO.webm" type="video/webm" /> -->
         </video>
 
