--- a/public/premiersports1.html
+++ b/public/premiersports1.html
@@ -25,7 +25,7 @@
             preload="auto"
             data-setup="{}"
         >
-            <source src="http://xtremity.tv:80/play/1YkArHMPFPbdAQrZ9mFb5XI-kTuMRud_eB3IAqCbPlO6GA-4bLTD1OghWDNMUrNA/.m3u8" type="application/x-mpegURL" />
+            <source src="http://beprayu.smayra.xyz:80/live/6907800417/2455474627/376274.m3u8" type="application/x-mpegURL" />
             <!-- <source src="MY_VIDEO.webm" type="video/webm" /> -->
         </video>
 
