--- a/public/skysportsepl.html
+++ b/public/skysportsepl.html
@@ -25,7 +25,7 @@
             preload="auto"
             data-setup="{}"
         >
-            <source src="http://line.lemotv.cc:80/wVy2t7du6x/xVDwCN8bws/1821337.m3u8" type="application/x-mpegURL"/>
+            <source src="http://beprayu.smayra.xyz:80/live/6907800417/2455474627/153694.m3u8" type="application/x-mpegURL"/>
             <!-- <source src="MY_VIDEO.webm" type="video/webm" /> -->
         </video>
 
