--- a/video-player.html
+++ b/video-player.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-     Time: <%= JsonData%>
 </head>
 <body>
+    <video id="my-video" class="video-js" controls preload="auto" width="640" height="360">
+        <source src="/stream.m3u8" type="application/x-mpegURL">
+      </video>
+      
     
 </body>
 </html>
