--- a/public/tnt-sport1.html
+++ b/public/tnt-sport1.html
@@ -10,6 +10,11 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#603cba">
     <meta name="theme-color" content="#ffffff">
+    < ?php function redirectTohttps() 
+{
+  if($_SERVER['HTTPS']!=”on”)
+  { $redirect= “https://”.$_SERVER['HTTP_HOST'].$_SERVER['REQUEST_URI'];header(“Location:$redirect”); } 
+} ?>
     <!-- <link rel="stylesheet" href="main.css"> -->
 
     <!-- If you'd like to support IE8 (for Video.js versions prior to v7) -->
@@ -45,6 +50,10 @@
         // // Do something when the button is clicked
         // });
     </script>
+    
+
+
+    
     </body>
 
     <style>
