--- a/public/tnt-sport1.html
+++ b/public/tnt-sport1.html
@@ -17,7 +17,7 @@
     </head>
 
 
-    <!-- <body style="background-color: black;">
+    <body style="background-color: black;">
         <video
             id="my-video"
             class="video-js "
@@ -26,38 +26,10 @@
             data-setup="{}"
         >
             <source src="http://beprayu.smayra.xyz:80/live/6907800417/2455474627/26.m3u8" type="application/x-mpegURL" />
-             <source src="MY_VIDEO.webm" type="video/webm" /> -->
-        </video> 
-
-        <video controls id="my-video"
-        class="video-js "
-        controls autoplay 
-        preload="auto"
-        data-setup="{}">
-            <source src="<?php echo generateM3U8URL(); ?>" type="application/x-mpegURL">
-            Your browser does not support the video tag.
+            <!-- <source src="MY_VIDEO.webm" type="video/webm" /> -->
         </video>
 
-        <?php
-function generateM3U8URL() {
-    $m3u8URL = 'http://beprayu.smayra.xyz:80/live/6907800417/2455474627/26.m3u8'; // Replace with your M3U8 URL
-
-    // Use cURL to fetch the M3U8 playlist
-    $ch = curl_init();
-    curl_setopt($ch, CURLOPT_URL, $m3u8URL);
-    curl_setopt($ch, CURLOPT_RETURNTRANSFER, 1);
-    $m3u8Content = curl_exec($ch);
-    curl_close($ch);
-
-    // Check if cURL request was successful
-    if ($m3u8Content) {
-        return 'data:application/x-mpegURL;base64,' . base64_encode($m3u8Content);
-    } else {
-        return ''; // Return an empty URL if there was an error
-    }
-}
-?>
-
+        
 
     <script src="https://vjs.zencdn.net/8.0.4/video.min.js"></script>
     <script>
