--- a/public/premiersports1.html
+++ b/public/premiersports1.html
@@ -26,7 +26,7 @@
             preload="auto"
             data-setup="{}"
         >
-            <source src="http://beprayu.smayra.xyz:80/live/6907800417/2455474627/376274.m3u8" type="application/x-mpegURL" />
+            <source src="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/300847.m3u8" type="application/x-mpegURL" />
             <!-- <source src="MY_VIDEO.webm" type="video/webm" /> -->
         </video>
 
