--- a/public/tnt-sport3.html
+++ b/public/tnt-sport3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>Manchester United Stream</title>
+    <title>TNT Sports 3</title>
     <link href="https://vjs.zencdn.net/8.0.4/video-js.css" rel="stylesheet" />
     <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
@@ -25,7 +25,7 @@
             preload="auto"
             data-setup="{}"
         >
-            <source src="http://xtremity.tv:80/play/1YkArHMPFPbdAQrZ9mFb5aV6D8q4_IafZdzVVVMuUJGjO-zVAJsvFajEkj1ZycMZ/.m3u8" type="application/x-mpegURL" />
+            <source src="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/300468.m3u8" type="application/x-mpegURL" />
             <!-- <source src="MY_VIDEO.webm" type="video/webm" /> -->
         </video>
 
