--- a/public/skysportsfootball.html
+++ b/public/skysportsfootball.html
@@ -25,7 +25,7 @@
             preload="auto"
             data-setup="{}"
         >
-            <source src="http://xtremity.tv:80/play/1YkArHMPFPbdAQrZ9mFb5Yh1J-JKi4sWIc9hGZjr3C-f9NYtoKgpixQV7b8jKP2u/.m3u8" type="application/x-mpegURL" />
+            <source src="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/437268.m3u8" type="application/x-mpegURL" />
             <!-- <source src="MY_VIDEO.webm" type="video/webm" /> -->
         </video>
 
