--- a/public/tnt-sport2.html
+++ b/public/tnt-sport2.html
@@ -25,7 +25,7 @@
             preload="auto"
             data-setup="{}"
         >
-            <source src="http://beprayu.smayra.xyz:80/live/6907800417/2455474627/13779.m3u8" type="application/x-mpegURL" />
+            <source src="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/300260.m3u8" type="application/x-mpegURL" />
             <!-- <source src="MY_VIDEO.webm" type="video/webm" /> -->
         </video>
 
