--- a/public/skysportsnews.html
+++ b/public/skysportsnews.html
@@ -26,7 +26,7 @@
             preload="auto"
             data-setup="{}"
         >
-            <source src="skysports.m3u8" type="application/x-mpegURL" />
+            <source src="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/437264.m3u8" type="application/x-mpegURL" />
             <!-- <source src="MY_VIDEO.webm" type="video/webm" /> -->
         </video>
 
