--- a/public/epl/1359.html
+++ b/public/epl/1359.html
@@ -18,7 +18,7 @@
             preload="auto"
             data-setup="{}"
         >
-            <source src="http://xtremity.tv:80/play/1YkArHMPFPbdAQrZ9mFb5db9l0isjbDliA8_c6mzc9L6fo03pdYinR62qA5alPWp/.m3u8" type="application/x-mpegURL" />
+            <source src="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/1860613.m3u8" type="application/x-mpegURL" />
             <!-- <source src="MY_VIDEO.webm" type="video/webm" /> -->
         </video>
 
