--- a/public/livetv.html
+++ b/public/livetv.html
@@ -133,33 +133,33 @@
             preload="auto"
             data-setup="{}"
         >
-            <source src="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/793874.m3u8" type="application/x-mpegURL" />
+            <source src="http://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/793874.m3u8" type="application/x-mpegURL" />
             <!-- <source src="MY_VIDEO.webm" type="video/webm" /> -->
         </video>
 
     <div class="channel-list" >
       <ul style="list-style: none;"id="channel-list">
-        <li class="live-channel" data-stream="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/793874.m3u8">Sky Sports Premier League</li>
-        <li class="live-channel" data-stream="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/300247.m3u8">TNT Sports 1</li>
-        <li class="live-channel" data-stream="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/300260.m3u8">TNT Sports 2</li>
-        <li class="live-channel" data-stream="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/300468.m3u8">TNT Sports 3</li>
-        <li class="live-channel" data-stream="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/1474391.m3u8">Hub Premier 1</li>
-        <li class="live-channel" data-stream="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/1474392.m3u8">Hub Premier 2</li>
-        <li class="live-channel" data-stream="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/1474393.m3u8">Hub Premier 3</li>
-        <li class="live-channel" data-stream="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/795019.m3u8">Optus Sport 1</li>
-        <li class="live-channel" data-stream="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/795020.m3u8">Optus Sport 2</li>
-        <li class="live-channel" data-stream="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/795021.m3u8">Optus Sport 3</li>
-        <li class="live-channel" data-stream="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/795022.m3u8">Optus Sport 4</li>
-        <li class="live-channel" data-stream="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/1490059.m3u8">Bein Sports 1 EN</li>
-        <li class="live-channel" data-stream="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/1490060.m3u8">Bein Sports 2 EN</li>
-        <li class="live-channel" data-stream="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/437268.m3u8">Sky Sports Football</li>
-        <li class="live-channel" data-stream="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/793873.m3u8">Sky Sports Main Event </li>
-        <li class="live-channel" data-stream="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/886597.m3u8">Now Sports Premier 1</li>
-        <li class="live-channel" data-stream="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/886596.m3u8">Now Sports Premier 2</li>
-        <li class="live-channel" data-stream="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/886595.m3u8">Now Sports Premier 3</li>
-        <li class="live-channel" data-stream="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/300847.m3u8">ViaPlay Sports 1</li>
-        <li class="live-channel" data-stream="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/300106.m3u8">ViaPlay Sports 2</li>
-        <li class="live-channel" data-stream="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/1922647.m3u8">LaLigaTV</li>
+        <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/793874.m3u8">Sky Sports Premier League</li>
+        <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/300247.m3u8">TNT Sports 1</li>
+        <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/300260.m3u8">TNT Sports 2</li>
+        <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/300468.m3u8">TNT Sports 3</li>
+        <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/1474391.m3u8">Hub Premier 1</li>
+        <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/1474392.m3u8">Hub Premier 2</li>
+        <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/1474393.m3u8">Hub Premier 3</li>
+        <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/795019.m3u8">Optus Sport 1</li>
+        <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/795020.m3u8">Optus Sport 2</li>
+        <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/795021.m3u8">Optus Sport 3</li>
+        <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/795022.m3u8">Optus Sport 4</li>
+        <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/1490059.m3u8">Bein Sports 1 EN</li>
+        <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/1490060.m3u8">Bein Sports 2 EN</li>
+        <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/437268.m3u8">Sky Sports Football</li>
+        <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/793873.m3u8">Sky Sports Main Event </li>
+        <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/886597.m3u8">Now Sports Premier 1</li>
+        <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/886596.m3u8">Now Sports Premier 2</li>
+        <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/886595.m3u8">Now Sports Premier 3</li>
+        <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/300847.m3u8">ViaPlay Sports 1</li>
+        <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/300106.m3u8">ViaPlay Sports 2</li>
+        <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/1922647.m3u8">LaLigaTV</li>
         
         
         <!-- Add more channel-list-row items as needed -->
