--- a/public/livetv.html
+++ b/public/livetv.html
@@ -133,7 +133,7 @@
             preload="auto"
             data-setup="{}"
         >
-            <source src="http://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/793874.m3u8" type="application/x-mpegURL" />
+            <source src="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/793874.m3u8" type="application/x-mpegURL" />
             <!-- <source src="MY_VIDEO.webm" type="video/webm" /> -->
         </video>
 
