--- a/public/livetv.html
+++ b/public/livetv.html
@@ -14,6 +14,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#603cba">
     <meta name="theme-color" content="#ffffff">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
   <style>
     body {
       background-color: #090229;
@@ -143,7 +144,7 @@
         <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/300247.m3u8">TNT Sports 1</li>
         <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/300260.m3u8">TNT Sports 2</li>
         <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/300468.m3u8">TNT Sports 3</li>
-        <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/1474391.m3u8">Hub Premier 1</li>
+        <li class="live-channel" data-stream="https://phantomtv.net/proxy/DzaghmcuFJ/Crhv7qkZ5/1474391.m3u8">Hub Premier 1</li>
         <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/1474392.m3u8">Hub Premier 2</li>
         <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/1474393.m3u8">Hub Premier 3</li>
         <li class="live-channel" data-stream="https://ptv.lol/DzaghmcuFJ/Crhv7qkZ5/795019.m3u8">Optus Sport 1</li>
