--- a/public/epl/33.html
+++ b/public/epl/33.html
@@ -3,10 +3,8 @@
     <head>
     <title>Manchester United Stream</title>
     <link href="https://vjs.zencdn.net/8.0.4/video-js.css" rel="stylesheet" />
-    <!-- <link rel="stylesheet" href="main.css"> -->
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
 
-    <!-- If you'd like to support IE8 (for Video.js versions prior to v7) -->
-    <!-- <script src="https://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script> -->
     </head>
 
 
@@ -18,7 +16,7 @@
             preload="auto"
             data-setup="{}"
         >
-            <source src="http://xtremity.tv:80/play/1YkArHMPFPbdAQrZ9mFb5XQmjZLMXcR-ZebZDk7brNSn9AXT8lrGDvsay21NcUFa/.m3u8" type="application/x-mpegURL" />
+            <source src="https://phantomtv.net/proxy/DzaghmcuFJ/Crhv7qkZ5/1860616.m3u8" type="application/x-mpegURL" />
             <!-- <source src="MY_VIDEO.webm" type="video/webm" /> -->
         </video>
 
