--- a/public/epl/34.html
+++ b/public/epl/34.html
@@ -3,6 +3,7 @@
     <head>
     <title>Newcastle United Stream</title>
     <link href="https://vjs.zencdn.net/8.0.4/video-js.css" rel="stylesheet" />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
     <!-- <link rel="stylesheet" href="main.css"> -->
 
     <!-- If you'd like to support IE8 (for Video.js versions prior to v7) -->
@@ -18,7 +19,7 @@
             preload="auto"
             data-setup="{}"
         >
-            <source src="http://xtremity.tv:80/play/1YkArHMPFPbdAQrZ9mFb5XQmjZLMXcR-ZebZDk7brNQRnyBA32INwTOXq3Ew-DO7/.m3u8" type="application/x-mpegURL" />
+            <source src="https://phantomtv.net/proxy/DzaghmcuFJ/Crhv7qkZ5/1860617.m3u8" type="application/x-mpegURL" />
             <!-- <source src="MY_VIDEO.webm" type="video/webm" /> -->
         </video>
 
