--- a/public/skysportsnews.html
+++ b/public/skysportsnews.html
@@ -11,6 +11,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#603cba">
     <meta name="theme-color" content="#ffffff">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
     <!-- <link rel="stylesheet" href="main.css"> -->
 
     <!-- If you'd like to support IE8 (for Video.js versions prior to v7) -->
@@ -26,7 +27,7 @@
             preload="auto"
             data-setup="{}"
         >
-            <source src="http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/437264.m3u8" type="application/x-mpegURL" />
+            <source src="https://phantomtv.net/proxy/DzaghmcuFJ/Crhv7qkZ5/437264.m3u8" type="application/x-mpegURL" />
             <!-- <source src="MY_VIDEO.webm" type="video/webm" /> -->
         </video>
 
