--- a/public/A/highlights.html
+++ b/public/A/highlights.html
@@ -4,8 +4,8 @@
 <head>
     <title>Match Highlights</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="mediaquery.css">
+    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/mediaquery.css">
   <link href="https://vjs.zencdn.net/8.0.4/video-js.css" rel="stylesheet" />
   <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
@@ -118,10 +118,10 @@
 
 <body>
   <div class="header">
-        <img src="images/phantomtvlogo.png" width="50" height="50">
-        <a href="/" style="text-decoration:none;color: inherit;font-size: 16px;border: 5cm white;"><div class="home"> <bold>HOME</bold> </div></a>
-        <a href="highlights.html" style="text-decoration:none;color: inherit;font-size: 16px;"><div class="live-tv"> <bold>HIGHLIGHTS</bold> </div></a>
-        <a href="livetv.html" style="text-decoration:none;color: inherit;font-size: 16px;"><div class="live-tv"> <bold>LIVE TV</bold> </div></a>
+        <img src="/images/phantomtvlogo.png" width="50" height="50">
+        <a href="/aidan" style="text-decoration:none;color: inherit;font-size: 16px;border: 5cm white;"><div class="home"> <bold>HOME</bold> </div></a>
+        <a href="/a/highlights.html" style="text-decoration:none;color: inherit;font-size: 16px;"><div class="live-tv"> <bold>HIGHLIGHTS</bold> </div></a>
+        <a href="/a/livetv.html" style="text-decoration:none;color: inherit;font-size: 16px;"><div class="live-tv"> <bold>LIVE TV</bold> </div></a>
      </div>
   <div id="video-container">
     <iframe class="iframe" id="player" src='' frameborder='0' allowfullscreen allow='autoplay; fullscreen' style=''></iframe>
