--- a/public/T/livetv.html
+++ b/public/T/livetv.html
@@ -3,8 +3,8 @@
 <head>
     <title>Live TV</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="mediaquery.css">
+    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/mediaquery.css">
   <link href="https://vjs.zencdn.net/8.0.4/video-js.css" rel="stylesheet" />
   <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
@@ -121,8 +121,8 @@
 <body>
   <div class="header">
         <img src="/images/phantomtvlogo.png" width="50" height="50">
-        <a href="/" style="text-decoration:none;color: inherit;font-size: 16px;border: 5cm white;"><div class="home"> <bold>HOME</bold> </div></a>
-        <a href="highlights.html" style="text-decoration:none;color: inherit;font-size: 16px;"><div class="live-tv"> <bold>HIGHLIGHTS</bold> </div></a>
+        <a href="/tem" style="text-decoration:none;color: inherit;font-size: 16px;border: 5cm white;"><div class="home"> <bold>HOME</bold> </div></a>
+        <a href="/t/highlights.html" style="text-decoration:none;color: inherit;font-size: 16px;"><div class="live-tv"> <bold>HIGHLIGHTS</bold> </div></a>
         <a href="livetv.html" style="text-decoration:none;color: inherit;font-size: 16px;"><div class="live-tv"> <bold>LIVE TV</bold> </div></a>
      </div>
   <div id="video-container">
