--- a/public/A/highlights.html
+++ b/public/A/highlights.html
@@ -120,8 +120,8 @@
   <div class="header">
         <img src="/images/phantomtvlogo.png" width="50" height="50">
         <a href="/aidan" style="text-decoration:none;color: inherit;font-size: 16px;border: 5cm white;"><div class="home"> <bold>HOME</bold> </div></a>
-        <a href="/a/highlights.html" style="text-decoration:none;color: inherit;font-size: 16px;"><div class="live-tv"> <bold>HIGHLIGHTS</bold> </div></a>
-        <a href="/a/livetv.html" style="text-decoration:none;color: inherit;font-size: 16px;"><div class="live-tv"> <bold>LIVE TV</bold> </div></a>
+        <a href="/A/highlights.html" style="text-decoration:none;color: inherit;font-size: 16px;"><div class="live-tv"> <bold>HIGHLIGHTS</bold> </div></a>
+        <a href="/A/livetv.html" style="text-decoration:none;color: inherit;font-size: 16px;"><div class="live-tv"> <bold>LIVE TV</bold> </div></a>
      </div>
   <div id="video-container">
     <iframe class="iframe" id="player" src='' frameborder='0' allowfullscreen allow='autoplay; fullscreen' style=''></iframe>
