--- a/public/T/tnt-sport1.html
+++ b/public/T/tnt-sport1.html
@@ -31,7 +31,7 @@
 
         // Define an array of quality options
         var qualityOptions = [
-            { label: '720p', src: 'https://phantomtv.net/proxy/DzaghmcuFJ/Crhv7qkZ5/300247.m3u8' }, { label: '720p (Luxury)', src: 'http://adam66222.cdngold.me:80/live/c8c81afe67/c71d26c056/588012.m3u8' }, {label: '360p', src: '360p' }
+            { label: '1080p', src: 'https://phantomtv.net/proxy/DzaghmcuFJ/Crhv7qkZ5/300247.m3u8' }, { label: '1080p (Backup)', src: 'http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/1490676.m3u8' }, {label: '720p', src: 'http://ptv.lol:80/DzaghmcuFJ/Crhv7qkZ5/437216.m3u8' }
             // Add more quality options as needed
         ];
 
