--- a/public/A/tnt-sport1.html
+++ b/public/A/tnt-sport1.html
@@ -31,7 +31,7 @@
 
         // Define an array of quality options
         var qualityOptions = [
-            { label: '720p', src: '720p' }, {label: '360p', src: '360p' }
+            { label: '1080p (Backup)', src: 'https://phantomtv.net/proxy/zHUKZPkf2P/wZEZ354C6v/1490676.m3u8' }, {label: '720p', src: 'https://phantomtv.net/proxy/zHUKZPkf2P/wZEZ354C6v/437216.m3u8' }
             // Add more quality options as needed
         ];
 
